deploy-minimal.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: "test-api"
  service: test-api
spec:
  replicas: "1"
  selector:
    name: "test-api"
  strategy:
    type: "Rolling"
  template:
    metadata:
      labels:
        name: "test-api"
    spec:
      containers:
        - name: "test-api"
          image: "fareoffice/api-kris:${VERSION}"
          imagePullPolicy: Always
          ports:
            - name: "test-api-1"
              containerPort: "8081"
              protocol: "TCP"
          livenessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 10
            timeoutSeconds: 10
---

apiVersion: v1
kind: Service
metadata:
 name: "test-api-service"
spec:
 selector:
   name: "test-api"
 ports:
 -
    name: test-api-service
    port: 8081
    targetPort: 8081
    protocol: TCP
---

apiVersion: v1
kind: Route
metadata:
  name: route-test-api
  service: test-api-service
  labels:
    router: external
spec:
  host: ${DEFAULT_URL}
  to:
    kind: Service
    name: test-api-service
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
    key: |-
${WILD_FAREONLINE_KEY}
    certificate: |-
${WILD_FAREONLINE_CERT}
    caCertificate: |-
${WILD_FAREONLINE_CA}
